--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -33,7 +33,7 @@
   color: white;
 }
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 900px) {
   .header_title h1 {
     font-size: 3em;
   }
@@ -43,7 +43,7 @@
   }
 }
 
-@media only screen and (max-width: 400px) {
+@media only screen and (max-width: 600px) {
   .header_title h1 {
     font-size: 2em;
   }
