--- a/src/components/ScoreInput.css
+++ b/src/components/ScoreInput.css
@@ -26,7 +26,7 @@
   grid-column-start: 1;
   grid-column-end: 3;
   margin: auto;
-  width: 81%;
+  width: 82%;
 }
 
 .input_container button {
@@ -40,13 +40,23 @@
   color: white;
 }
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 1200px) {
   .input_container label {
-    font-size: 1.2em;
+    font-size: 1.4em;
   }
 
-  .input_container div:last-child {
-    width: 80%;
+  .input_container button {
+    font-size: 1.3em;
+  }
+}
+
+@media only screen and (max-width: 900px) {
+  .input_container label {
+    font-size: 1.1em;
+  }
+
+  .input_container input {
+    font-size: 0.8em;
   }
 
   .input_container button {
@@ -54,9 +64,17 @@
   }
 }
 
-@media only screen and (max-width: 400px) {
+@media only screen and (max-width: 600px) {
   .input_container label {
     font-size: 0.8em;
+  }
+
+  .input_container input {
+    font-size: 0.8em;
+  }
+
+  .input_container div:last-child {
+    width: 80%;
   }
 
   .input_container button {
